fix typo in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "keywords": [
     "recyclerview",
     "list",
-    "react-native",
+    "react-native"
   ],
   "author": "",
   "license": "MIT",
