--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,7 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.45.1"		
+		"react-native": "^0.48.4"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
