--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'example'
 
 include ':react-native-recyclerview-list'
-project(':react-native-recyclerview-list').projectDir = new File(rootProject.projectDir, 	'../../android')
+project(':react-native-recyclerview-list').projectDir = new File(rootProject.projectDir, 	'../../library/android')
 
 include ':app'
 
