--- a/example/package.json
+++ b/example/package.json
@@ -7,8 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "^0.48.4"
+		"react": "^16.3.0-alpha.1",
+		"react-native": "0.54.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
