--- a/example/package.json
+++ b/example/package.json
@@ -8,13 +8,13 @@
 	},
 	"dependencies": {
 		"react": "^16.3.0-alpha.1",
-		"react-native": "0.54.2"
+		"react-native": "0.54.2",
+		"react-native-recyclerview-list": "file:../library"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "^2.1.0",
 		"jest": "20.0.4",
-		"react-native-recyclerview-list": "file:../library/",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
