--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "^16.3.0-alpha.1",
-		"react-native": "0.54.2"
+		"react": "16.3.1",
+		"react-native": "0.55.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
