--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.0.0-alpha.12",
-    "react-native": "^0.48.3"
+    "react": "16.3.1",
+    "react-native": "0.55.3"
   },
   "dependencies": {
     "prop-types": "^15.6.0"
