--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,6 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 16
@@ -31,7 +30,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.android.support:recyclerview-v7:23.0.1'
 }
   
