--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,10 +1,5 @@
 {
-  "presets": ["react-native"],
-  "plugins": [
-    ["module-resolver", {
-      "alias": {
-        "react-native-recyclerview-list": "../"
-      }
-    }]
-  ]
+  "presets": [
+    "module:metro-react-native-babel-preset"
+  ],
 }
