--- a/example/package.json
+++ b/example/package.json
@@ -9,15 +9,18 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "^16.3.0-alpha.1",
-		"react-native": "0.54.2"
+		"prop-types": "^15.6.0",
+		"react": "16.6.0-alpha.8af6728",
+		"react-native": "0.57.4",
+		"react-native-recyclerview-list": "file:../"
 	},
 	"devDependencies": {
-		"babel-jest": "20.0.3",
+		"@babel/runtime": "^7.1.2",
+		"babel-jest": "^23.6.0",
 		"babel-plugin-module-resolver": "^3.1.1",
-		"babel-preset-react-native": "^2.1.0",
-		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"jest": "^23.6.0",
+		"metro-react-native-babel-preset": "0.48.1",
+		"react-test-renderer": "16.6.0-alpha.8af6728"
 	},
 	"jest": {
 		"preset": "react-native"
