--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.0.0-alpha.12",
-    "react-native": "^0.48.3"
+    "prop-types": "*",
+    "react": "*",
+    "react-native": "*"
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
   }
 }
