--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,9 @@
 		"react-test-renderer": "16.6.0-alpha.8af6728"
 	},
 	"jest": {
-		"preset": "react-native"
+		"preset": "react-native",
+		"transform": { 
+			"^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+		}
 	}
 }
