--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,11 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
     }
 }
 
@@ -16,11 +17,11 @@ def safeExtGet(prop, fallback) {
 }
 
 def _reactNativeVersion = safeExtGet("reactNative", "+")
-def _recyclerviewVersion = safeExtGet("recyclerviewLibVersion", "26.0.3")
+def _recyclerviewVersion = safeExtGet("recyclerviewLibVersion", "27.1.1")
 
 android {
     compileSdkVersion safeExtGet("compileSdkVersion", 26)
-    buildToolsVersion safeExtGet("buildToolsVersion", "26.0.3")
+    buildToolsVersion safeExtGet("buildToolsVersion", "27.0.3")
 
     defaultConfig {
         minSdkVersion safeExtGet("minSdkVersion", 16)
